RESOLVED FIXED 114424
Parent box with background-size auto and gradient image does not get properly repainted when child box is resized.
https://bugs.webkit.org/show_bug.cgi?id=114424
Summary Parent box with background-size auto and gradient image does not get properly...
zalan
Reported 2013-04-11 02:10:36 PDT
Created attachment 197527 [details] test reduction ssia. reduction case attached. patch is coming up.
Attachments
test reduction (553 bytes, text/html)
2013-04-11 02:10 PDT, zalan
no flags
Patch (5.57 KB, patch)
2013-04-11 06:22 PDT, zalan
no flags
Patch (5.59 KB, patch)
2013-04-11 06:51 PDT, zalan
no flags
Patch (5.59 KB, patch)
2013-04-11 07:10 PDT, zalan
no flags
zalan
Comment 1 2013-04-11 06:22:56 PDT
Antti Koivisto
Comment 2 2013-04-11 06:28:02 PDT
Comment on attachment 197582 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=197582&action=review > Source/WebCore/rendering/RenderObject.cpp:843 > + // If the image has neither an intrinsic width nor an intrinsic height, its size is determined as for 'contain'. > + if ((size.width().isPercent() || size.height().isPercent()) > + || ((size.width().isAuto() || size.height().isAuto()) && img->isGeneratedImage())) > return true; I would make these (percent case and auto case) two separate ifs.
zalan
Comment 3 2013-04-11 06:51:17 PDT
zalan
Comment 4 2013-04-11 07:10:05 PDT
WebKit Commit Bot
Comment 5 2013-04-11 07:34:53 PDT
Comment on attachment 197585 [details] Patch Rejecting attachment 197585 [details] from commit-queue. Failed to run "['/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch', '--status-host=webkit-commit-queue.appspot.com', '--bot-id=webkit-cq-03', 'land-attachment', '--force-clean', '--non-interactive', '--parent-command=commit-queue', 197585, '--port=mac']" exit_code: 2 cwd: /Volumes/Data/EWS/WebKit Last 500 characters of output: a8310c12 M LayoutTests :040000 040000 ea577dc70eef113eda3300c255be3947abe6514e d634b9c1ee16089549fca5c42e71947e6b4ad4b4 M Source Current branch master is up to date. ERROR: Not all changes have been committed into SVN, however the committed ones (if any) seem to be successfully integrated into the working tree. Please see the above messages for details. Failed to run "['git', 'svn', 'dcommit']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit Updating OpenSource Current branch master is up to date. Full output: http://webkit-commit-queue.appspot.com/results/17679113
WebKit Commit Bot
Comment 6 2013-04-11 07:49:44 PDT
Comment on attachment 197585 [details] Patch Clearing flags on attachment: 197585 Committed r148203: <http://trac.webkit.org/changeset/148203>
WebKit Commit Bot
Comment 7 2013-04-11 07:49:46 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.