Parent box with background-size auto and gradient image does not get properly repainted when child box is resized. https://bugs.webkit.org/show_bug.cgi?id=114424

Source/WebCore:

Patch by Zalan Bujtas <zalan@apple.com> on 2013-04-11
Reviewed by Antti Koivisto.

Initiate full repaint on fill layer, when the image is generated and the background
property defines auto size.
http://www.w3.org/TR/css3-background/#background-size
'If the image has neither an intrinsic width nor an intrinsic height, its size is determined as for 'contain'.'

Extended fast/repaint/background-shorthand-with-gradient-and-height-changes.html
to cover this case too.

* rendering/RenderObject.cpp:
(WebCore::mustRepaintFillLayers):

LayoutTests:

Patch by Zalan Bujtas <zalan@apple.com> on 2013-04-11
Reviewed by Antti Koivisto.

* fast/repaint/background-shorthand-with-gradient-and-height-changes-expected.txt:
* fast/repaint/background-shorthand-with-gradient-and-height-changes.html:

Canonical link: https://commits.webkit.org/132816@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@148203 268f45cc-cd09-0410-ab3c-d52691b4dbfc